--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
         direction: rtl;
         margin: 0;
         padding: 0;
-        background-color: rgb(211, 203, 194);
+        animation: bganima 60s linear infinite;
+        background-size: 400% 400%;
+        background: linear-gradient();
 
+    }
+    @keyframes bganima{
+        0%{background-color: rgb(201, 169, 156);}
+        25%{background-color: beige;}
+        50%{background-color: rgb(202, 178, 149);}
+        75%{background-color: rgb(138, 180, 165);}
+        100%{background-color: rgb(201, 169, 156);}
     }
     .container{
         max-width: 1500px;
@@ -51,6 +60,10 @@
     margin-left: 15px;
     text-decoration: none;
     color: blue;
+    gap: 5px;
+    align-items: center;
+    border-left: 1px solid rgb(170, 140, 140);
+    padding-left: 15px;
     }
     .content{
         display: flex;
@@ -68,6 +81,8 @@
       padding-bottom: 5px;
       font-size: 20px;
       margin-bottom: 15px;
+      text-align: center;
+      box-shadow: 7px 7px 7px rgb(212, 128, 128);
     }
 
     ul {
@@ -77,7 +92,19 @@
     li {
       margin-bottom: 8px;
     }
-
+    .social img{
+        width: 20px; 
+        height: 20px;
+        margin-top: 10px;
+        border-radius: 50%;
+    }
+    .blue{
+        color: rgb(55, 55, 190);
+        font-weight: bold;
+    }
+    .num{
+        font-size: small;
+    }
 
 </style>
 <body>
@@ -85,22 +112,29 @@
         <div class="top">
                 <div class="avatar" style="background-image: url('pic/c.jpg');"></div>
                 <div class="info"><h1>رزومه صادق حیاتی</h1><p class="field">مهندسی کامپیوتر</p>
-                <div class="social"><a href="mailto:mr.sadegh8@gmail.com"><i class="fas fa-envelope"></i>mr.sadegh8@gmail.com</a>
-                <a href="https://github.com/sadeqhyt"><i class="fab fa-github"></i>sadeqhyt</a>
+                <div class="social">
+                    <a href="mailto:mr.sadegh8@gmail.com" title="mail" target="_blank" rel="noopener noreferrer"><img src="pic/gmai.webp" alt="gmail"> </a>
+                    <a href="https://github.com/sadeqhyt"  title="github" target="_blank" rel="noopener noreferrer"><img class="" src="pic/Github-512.webp" alt="github"></a>
+                    <a href="https://instagram.com/sadeqhyt" title="instagram" target="_blank" rel="noopener noreferrer"><img class="" src="pic/instagram-63.webp" alt="instagram"></a>
                 </div>
                 </div>
         </div>
             <div class="content">
                 <div class="left">
                     <h2>سوابق کاری</h2>
-                    <p>ندارم</p>
+                    <li>برنامه نویس front-end در شرکت <b class="blue">فناوران دانشگر</b></li>
+                    <p class="num">1395-1398</p>
+                    <li>طراح UI در شرکت <b class="blue">کوبیکس</b></li>
+                    <p class="num">1399-1403</p>
+                    <li>طراح وب  در شرکت <i class="blue">اسوه ایران</i></li>
+                    <p class="num">1404</p>
                 </div>
                 <div class="right">
                     <h2>تحصیلات</h2>
                 <ul>
                     <li>کارشناسی مهندسی کامپیوتر دانشگاه علوم و فنون هوایی شهید ستاری</li>
                     <li>معدل:14</li>
-                    <li>اشنایی </li>
+                    <li>اشنایی با زبانهای html,css,c#</li>
                 </ul>
                 </div>
             </div>
